--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -5,23 +5,23 @@ resources:
     uri: https://github.com/eddytnk/deploy-springboot-app-using-concourse-ci
     branch: master
 
-- name: s3-stored-jar
-  type: s3
-  source:
-    bucket: eddytnk
-    region_name: us-east-2
-    regexp: jars/springboot-concourse-(.*)-SNAPSHOT.jar
-    access_key_id: ((AWSAccessKeyId))
-    secret_access_key: ((AWSSecretKey))
+# - name: s3-stored-jar
+#   type: s3
+#   source:
+#     bucket: eddytnk
+#     region_name: us-east-2
+#     regexp: jars/springboot-concourse-(.*)-SNAPSHOT.jar
+#     access_key_id: ((AWSAccessKeyId))
+#     secret_access_key: ((AWSSecretKey))
 
 - name: pcf-resource
   type: cf
   source:
     api: https://api.run.pivotal.io
-    username: ((PCF_EMAIL))
-    password: ((PCF_PASSWORD))
-    organization: ((PCF_ORG))
-    space: ((PCF_SPACE))
+    username: chandra.yarramreddy@gmail.com
+    password: Mypassword@1
+    organization: Devops
+    space: development
     skip_cert_check: false
 
 jobs:
@@ -30,7 +30,7 @@ jobs:
   plan:
     - get: source-code-from-github
       trigger: true
-    - get: s3-stored-jar
+    #- get: s3-stored-jar
     - task: run-test-and-build-jar-file
       config:
         platform: linux
@@ -47,16 +47,16 @@ jobs:
         - path: source-code-from-github/.m2
         run:
           path: ./source-code-from-github/ci/test-and-build.sh
-    - put: s3-stored-jar
-      params:
-        file: jar-file/*.jar
+    # - put: s3-stored-jar
+    #   params:
+    #     file: jar-file/*.jar
 
 - name: deploy-app-to-pcf
   public: true
   plan:
-  - get: s3-stored-jar
-    passed: [test-and-build]
-    trigger: true
+  # - get: s3-stored-jar
+  #   passed: [test-and-build]
+  #   trigger: true
   - get: source-code-from-github
   - put: pcf-resource
     params:
