--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -2,7 +2,7 @@ resources:
 - name: source-code-from-github
   type: git
   source:
-    uri: https://github.com/eddytnk/deploy-springboot-app-using-concourse-ci
+    uri: https://github.com/chandrayarramreddy/deploy-springboot-app-using-concourse-ci-1.git
     branch: master
 
 # - name: s3-stored-jar
@@ -51,15 +51,15 @@ jobs:
     #   params:
     #     file: jar-file/*.jar
 
-- name: deploy-app-to-pcf
-  public: true
-  plan:
+# - name: deploy-app-to-pcf
+#   public: true
+#   plan:
   # - get: s3-stored-jar
   #   passed: [test-and-build]
   #   trigger: true
-  - get: source-code-from-github
-  - put: pcf-resource
-    params:
-      manifest: source-code-from-github/ci/manifest.yml
-
+  # - get: source-code-from-github
+    - put: pcf-resource
+      params:
+        manifest: source-code-from-github/ci/manifest.yml
+        path: jar-file/*.jar
 
